Lerakható hajók generálása

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container-fluid">
 
         <div class="row">
-            <div class="col-6 bal" id="jatekter-ember">
+            <div class="col-8" id="jatekter-ember">
         
             </div>
-            <div class="col-6 jobb" id="jatekter-bot">
+            <div class="col-4" id="jatekter-bot">
         
             </div>
         </div>
